--- a/xi_jornadas2.html
+++ b/xi_jornadas2.html
@@ -387,7 +387,7 @@ So, for example, `create_tridiagonal(3,1,2)` should return:
 ## [3,]    0    2    1
 ```
 
-<div class="countdown" id="timer_5dcda779" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5dcdd5e0" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -495,7 +495,7 @@ mem_used()
 ```
 
 ```
-## 62.3 MB
+## 62.4 MB
 ```
 
 ```r
@@ -571,7 +571,7 @@ end_time - start_time
 ```
 
 ```
-## Time difference of 3.008737 secs
+## Time difference of 3.00755 secs
 ```
 
 ```r
@@ -580,7 +580,7 @@ system.time({ Sys.sleep(3)})
 
 ```
 ##    user  system elapsed 
-##   0.001   0.000   3.004
+##   0.000   0.000   3.003
 ```
 
 - "User CPU time” gives the CPU time spent by the current process and “system CPU time” gives the CPU time spent by the kernel (the operating system) on behalf of the current process. (Post by William Dunlap)
@@ -599,7 +599,7 @@ toc()
 ```
 
 ```
-## sleeping: 3.007 sec elapsed
+## sleeping: 3.01 sec elapsed
 ```
 
 ---
@@ -619,8 +619,8 @@ x &lt;- runif(100)
 ## # A tibble: 2 x 6
 ##   expression      min   median `itr/sec` mem_alloc `gc/sec`
 ##   &lt;bch:expr&gt; &lt;bch:tm&gt; &lt;bch:tm&gt;     &lt;dbl&gt; &lt;bch:byt&gt;    &lt;dbl&gt;
-## 1 sqrt(x)       428ns 469.97ns  1214673.      848B        0
-## 2 x^0.5           8µs   9.42µs   103484.      848B        0
+## 1 sqrt(x)    440.98ns 476.95ns  1794778.      848B        0
+## 2 x^0.5        9.04µs   9.34µs    96558.      848B        0
 ```
 
 ---
@@ -639,9 +639,9 @@ microbenchmark(
 
 ```
 ## Unit: nanoseconds
-##     expr  min     lq    mean median     uq   max neval
-##  sqrt(x)  374  549.0 1066.98  619.5  774.0 22383   100
-##    x^0.5 7564 7733.5 8848.93 7803.0 7953.5 45306   100
+##     expr  min     lq    mean median   uq   max neval
+##  sqrt(x)  369  555.0  654.57  602.5  696  2408   100
+##    x^0.5 7581 7772.5 8446.35 7829.5 7968 26481   100
 ```
 
 ---
@@ -661,8 +661,8 @@ benchmark(
 
 ```
 ##      test replications elapsed relative user.self sys.self user.child
-## 1 method1          100   0.001        1     0.000    0.001          0
-## 2 method2          100   0.002        2     0.002    0.000          0
+## 1 method1          100   0.000       NA     0.001        0          0
+## 2 method2          100   0.002       NA     0.002        0          0
 ##   sys.child
 ## 1         0
 ## 2         0
@@ -768,11 +768,11 @@ benchmark(m1 &lt;- create_tridiagonal(5000,1,-1),
 
 ```
 ##                                     test replications elapsed relative
-## 1  m1 &lt;- create_tridiagonal(5000, 1, -1)            3   0.660      2.3
-## 2 m2 &lt;- create_tridiagonal2(5000, 1, -1)            3   0.287      1.0
+## 1  m1 &lt;- create_tridiagonal(5000, 1, -1)            3   0.655    2.251
+## 2 m2 &lt;- create_tridiagonal2(5000, 1, -1)            3   0.291    1.000
 ##   user.self sys.self user.child sys.child
-## 1     0.275    0.384          0         0
-## 2     0.127    0.160          0         0
+## 1     0.287    0.369          0         0
+## 2     0.139    0.152          0         0
 ```
 
 ---
@@ -843,11 +843,11 @@ benchmark(m3 &lt;- diagonal(5000,1,-1),
 
 ```
 ##                           test replications elapsed relative user.self
-## 1  m3 &lt;- diagonal(5000, 1, -1)            3   1.632    6.974     1.172
-## 2 m4 &lt;- diagonal2(5000, 1, -1)            3   0.234    1.000     0.093
+## 1  m3 &lt;- diagonal(5000, 1, -1)            3   1.566    6.165     1.026
+## 2 m4 &lt;- diagonal2(5000, 1, -1)            3   0.254    1.000     0.083
 ##   sys.self user.child sys.child
-## 1    0.460          0         0
-## 2    0.141          0         0
+## 1    0.540          0         0
+## 2    0.172          0         0
 ```
 
 
@@ -903,11 +903,11 @@ benchmark(m5 &lt;- tridiagonal_matrix(5000,1,-1),
 
 ```
 ##                                     test replications elapsed relative
-## 1  m5 &lt;- tridiagonal_matrix(5000, 1, -1)            3   4.251    1.632
-## 2 m6 &lt;- tridiagonal_matrix2(5000, 1, -1)            3   2.605    1.000
+## 1  m5 &lt;- tridiagonal_matrix(5000, 1, -1)            3   4.207    1.529
+## 2 m6 &lt;- tridiagonal_matrix2(5000, 1, -1)            3   2.752    1.000
 ##   user.self sys.self user.child sys.child
-## 1     2.718    1.533          0         0
-## 2     1.471    1.125          0         0
+## 1     2.686    1.521          0         0
+## 2     1.572    1.180          0         0
 ```
 
 ---
@@ -965,11 +965,11 @@ benchmark(m7 &lt;- create_tridiagonal_sb(5000,1,-1),
 
 ```
 ##                                        test replications elapsed relative
-## 1  m7 &lt;- create_tridiagonal_sb(5000, 1, -1)            3   0.885    4.005
-## 2 m8 &lt;- create_tridiagonal_sb2(5000, 1, -1)            3   0.221    1.000
+## 1  m7 &lt;- create_tridiagonal_sb(5000, 1, -1)            3   0.888    4.073
+## 2 m8 &lt;- create_tridiagonal_sb2(5000, 1, -1)            3   0.218    1.000
 ##   user.self sys.self user.child sys.child
-## 1     0.733    0.152          0         0
-## 2     0.095    0.128          0         0
+## 1     0.745    0.144          0         0
+## 2     0.062    0.155          0         0
 ```
 
 ---
@@ -1024,11 +1024,11 @@ benchmark(m9 &lt;- tridiagonal_piotr_opiela(5000,1,-1),
 
 ```
 ##                                            test replications elapsed
-## 2 m10 &lt;- tridiagonal_piotr_opiela2(5000, 1, -1)            3   2.294
-## 1   m9 &lt;- tridiagonal_piotr_opiela(5000, 1, -1)            3   4.646
+## 2 m10 &lt;- tridiagonal_piotr_opiela2(5000, 1, -1)            3   2.326
+## 1   m9 &lt;- tridiagonal_piotr_opiela(5000, 1, -1)            3   4.618
 ##   relative user.self sys.self user.child sys.child
-## 2    1.000     1.713     0.58          0         0
-## 1    2.025     3.225     1.42          0         0
+## 2    1.000     1.747    0.580          0         0
+## 1    1.985     3.314    1.304          0         0
 ```
 
 ---
@@ -1047,17 +1047,17 @@ benchmark(create_tridiagonal(5000,1,-1),
 
 ```
 ##                                    test replications elapsed relative
-## 1       create_tridiagonal(5000, 1, -1)            3   0.540    1.000
-## 4    create_tridiagonal_sb(5000, 1, -1)            3   0.929    1.720
-## 2                 diagonal(5000, 1, -1)            3   1.590    2.944
-## 3       tridiagonal_matrix(5000, 1, -1)            3   4.297    7.957
-## 5 tridiagonal_piotr_opiela(5000, 1, -1)            3   4.961    9.187
+## 1       create_tridiagonal(5000, 1, -1)            3   0.549    1.000
+## 4    create_tridiagonal_sb(5000, 1, -1)            3   1.036    1.887
+## 2                 diagonal(5000, 1, -1)            3   1.526    2.780
+## 3       tridiagonal_matrix(5000, 1, -1)            3   4.258    7.756
+## 5 tridiagonal_piotr_opiela(5000, 1, -1)            3   5.461    9.947
 ##   user.self sys.self user.child sys.child
-## 1     0.192    0.348          0         0
-## 4     0.761    0.168          0         0
-## 2     1.017    0.573          0         0
-## 3     2.780    1.516          0         0
-## 5     3.465    1.495          0         0
+## 1     0.212    0.336          0         0
+## 4     0.868    0.168          0         0
+## 2     1.068    0.457          0         0
+## 3     2.749    1.508          0         0
+## 5     3.904    1.556          0         0
 ```
 
 ---
@@ -1066,27 +1066,38 @@ benchmark(create_tridiagonal(5000,1,-1),
 
 ```
 ##                                      test replications elapsed relative
-## 9     create_tridiagonal_sb2(5000, 1, -1)            3   0.232    1.000
-## 6        create_tridiagonal2(5000, 1, -1)            3   0.239    1.030
-## 7                  diagonal2(5000, 1, -1)            3   0.263    1.134
-## 1         create_tridiagonal(5000, 1, -1)            3   0.542    2.336
-## 4      create_tridiagonal_sb(5000, 1, -1)            3   0.928    4.000
-## 2                   diagonal(5000, 1, -1)            3   1.526    6.578
-## 10 tridiagonal_piotr_opiela2(5000, 1, -1)            3   2.461   10.608
-## 8        tridiagonal_matrix2(5000, 1, -1)            3   2.824   12.172
-## 3         tridiagonal_matrix(5000, 1, -1)            3   4.234   18.250
-## 5   tridiagonal_piotr_opiela(5000, 1, -1)            3   4.889   21.073
+## 9     create_tridiagonal_sb2(5000, 1, -1)            3   0.227    1.000
+## 6        create_tridiagonal2(5000, 1, -1)            3   0.246    1.084
+## 7                  diagonal2(5000, 1, -1)            3   0.263    1.159
+## 1         create_tridiagonal(5000, 1, -1)            3   0.579    2.551
+## 4      create_tridiagonal_sb(5000, 1, -1)            3   0.925    4.075
+## 2                   diagonal(5000, 1, -1)            3   1.722    7.586
+## 10 tridiagonal_piotr_opiela2(5000, 1, -1)            3   2.406   10.599
+## 8        tridiagonal_matrix2(5000, 1, -1)            3   2.737   12.057
+## 5   tridiagonal_piotr_opiela(5000, 1, -1)            3   4.943   21.775
+## 3         tridiagonal_matrix(5000, 1, -1)            3   5.416   23.859
 ##    user.self sys.self user.child sys.child
-## 9      0.056    0.176          0         0
-## 6      0.085    0.153          0         0
-## 7      0.071    0.191          0         0
-## 1      0.174    0.367          0         0
-## 4      0.755    0.172          0         0
-## 2      1.063    0.464          0         0
-## 10     1.872    0.588          0         0
-## 8      1.592    1.203          0         0
-## 3      2.714    1.519          0         0
-## 5      3.441    1.448          0         0
+## 9      0.063    0.164          0         0
+## 6      0.055    0.192          0         0
+## 7      0.088    0.176          0         0
+## 1      0.215    0.364          0         0
+## 4      0.741    0.184          0         0
+## 2      1.122    0.599          0         0
+## 10     1.859    0.547          0         0
+## 8      1.548    1.189          0         0
+## 5      3.523    1.420          0         0
+## 3      3.327    2.088          0         0
+```
+
+---
+# Exercise
+
+Generate 100 matrices where n = 500, and d1, and d2 are predefined random integers between -10 and 10:
+
+
+```r
+d1_vector &lt;- sample(-10:10, 100, replace = T)
+d2_vector &lt;- sample(-10:10, 100, replace = T)
 ```
 
 ---
