add the url of the presentation

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 class: center, middle, inverse, title-slide
 
 # Tips, trucos, y algunos paquetes para programacion eficiente en R
+## <a href="http://adolfoalvarez.cl/r_eficiente/" class="uri">http://adolfoalvarez.cl/r_eficiente/</a>
 ### Adolfo Alvarez (Collegium Da Vinci, Analyx)
 ### 2019-11-15
 
@@ -387,7 +388,7 @@ So, for example, `create_tridiagonal(3,1,2)` should return:
 ## [3,]    0    2    1
 ```
 
-<div class="countdown" id="timer_5dce9e71" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5dcea929" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1162,7 +1163,7 @@ system.time({
 
 ```
 ##    user  system elapsed 
-##   0.144   0.035   0.180
+##   0.155   0.019   0.174
 ```
 
 ---
@@ -1331,7 +1332,7 @@ system.time({
 
 ```
 ##    user  system elapsed 
-##   0.333   0.098   1.541
+##   0.339   0.087   1.538
 ```
 
 
@@ -1343,7 +1344,7 @@ system.time({
 
 ```
 ##    user  system elapsed 
-##   0.307   0.124   0.836
+##   0.320   0.114   0.837
 ```
 
 ---
@@ -1364,7 +1365,7 @@ system.time({
 
 ```
 ##    user  system elapsed 
-##   0.129   0.022   0.151
+##   0.106   0.044   0.149
 ```
 
 
@@ -1376,7 +1377,7 @@ system.time({
 
 ```
 ##    user  system elapsed 
-##    0.08    0.02    0.10
+##   0.072   0.023   0.096
 ```
 
 ---
