last minute changes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 class: center, middle, inverse, title-slide
 
 # Tips, trucos, y algunos paquetes para programacion eficiente en R
-## <a href="http://adolfoalvarez.cl/r_eficiente/" class="uri">http://adolfoalvarez.cl/r_eficiente/</a>
 ### Adolfo Alvarez (Collegium Da Vinci, Analyx)
 ### 2019-11-15
 
@@ -27,7 +26,9 @@ class: center, middle
 
 
 
-# Pero antes, un pequeño avance...
+# http://adolfoalvarez.cl/r_eficiente/
+
+## Pero antes, un pequeño avance...
 
 ---
 class: center, middle
@@ -276,7 +277,7 @@ make_clean_names(ugly_names)
 ```
 
 ---
-# A harder example, what this function does?
+# A harder example, what does this function do?
 
 
 ```r
@@ -388,7 +389,7 @@ So, for example, `create_tridiagonal(3,1,2)` should return:
 ## [3,]    0    2    1
 ```
 
-<div class="countdown" id="timer_5dcea929" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5dcea965" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1163,7 +1164,7 @@ system.time({
 
 ```
 ##    user  system elapsed 
-##   0.155   0.019   0.174
+##   0.168   0.036   0.204
 ```
 
 ---
@@ -1332,7 +1333,7 @@ system.time({
 
 ```
 ##    user  system elapsed 
-##   0.339   0.087   1.538
+##   0.311   0.111   1.525
 ```
 
 
@@ -1344,7 +1345,7 @@ system.time({
 
 ```
 ##    user  system elapsed 
-##   0.320   0.114   0.837
+##   0.276   0.144   0.855
 ```
 
 ---
@@ -1365,7 +1366,7 @@ system.time({
 
 ```
 ##    user  system elapsed 
-##   0.106   0.044   0.149
+##   0.124   0.028   0.153
 ```
 
 
@@ -1377,7 +1378,7 @@ system.time({
 
 ```
 ##    user  system elapsed 
-##   0.072   0.023   0.096
+##   0.058   0.040   0.098
 ```
 
 ---
